WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
145935
Fix minor ES6 compliance issue in RegExp.prototype.toString and optimize performance a little
https://bugs.webkit.org/show_bug.cgi?id=145935
Summary
Fix minor ES6 compliance issue in RegExp.prototype.toString and optimize perf...
Darin Adler
Reported
2015-06-12 12:11:59 PDT
Fix minor ES6 compliance issue in RegExp.prototype.toString and optimize performance a little
Attachments
Patch
(4.68 KB, patch)
2015-06-12 12:15 PDT
,
Darin Adler
no flags
Details
Formatted Diff
Diff
Patch
(4.64 KB, patch)
2015-06-12 12:17 PDT
,
Darin Adler
no flags
Details
Formatted Diff
Diff
Patch
(9.60 KB, patch)
2015-06-12 18:12 PDT
,
Darin Adler
andersca
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2015-06-12 12:12:54 PDT
My first cut at a patch doesn’t have a regression test because I don’t know where to put it.
Darin Adler
Comment 2
2015-06-12 12:15:08 PDT
Created
attachment 254813
[details]
Patch
Darin Adler
Comment 3
2015-06-12 12:15:48 PDT
Comment on
attachment 254813
[details]
Patch Don’t really want to get this reviewed until I add a test for the behavior change.
Jordan Harband
Comment 4
2015-06-12 12:16:19 PDT
LGTM, thanks for cleaning up my patch too!
Darin Adler
Comment 5
2015-06-12 12:17:48 PDT
Created
attachment 254814
[details]
Patch
Darin Adler
Comment 6
2015-06-12 18:12:30 PDT
Created
attachment 254844
[details]
Patch
Darin Adler
Comment 7
2015-06-12 18:13:26 PDT
Now this has a test. Added a few people who might review the patch.
Anders Carlsson
Comment 8
2015-06-12 18:23:36 PDT
Comment on
attachment 254844
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=254844&action=review
> Source/JavaScriptCore/runtime/RegExpPrototype.cpp:140 > +typedef char FlagsString[3 + 1]; // 3 different flags and a null character terminator
I'd use std::array for this.
> Source/JavaScriptCore/runtime/RegExpPrototype.cpp:142 > +static inline void getFlags(ExecState* exec, JSObject* regexp, FlagsString& flags)
I don't think this needs to use the get pattern - it can just return a FlagsString (if FlagsString were an std::array that is).
> Source/JavaScriptCore/runtime/RegExpPrototype.cpp:159 > + flags[index] = 0;
I'd assert that index < sizeof(FlagsString) here.
Anders Carlsson
Comment 9
2015-06-12 18:26:24 PDT
(In reply to
comment #8
)
> > Source/JavaScriptCore/runtime/RegExpPrototype.cpp:142 > > +static inline void getFlags(ExecState* exec, JSObject* regexp, FlagsString& flags) > > I don't think this needs to use the get pattern - it can just return a > FlagsString (if FlagsString were an std::array that is). >
I just tested, and if a function returns an std::array<char, 4>, the compiler will just put the entire value in a register - no memory access needed!
Darin Adler
Comment 10
2015-06-12 18:35:44 PDT
Committed
r185528
: <
http://trac.webkit.org/changeset/185528
>
Anders Carlsson
Comment 11
2015-06-12 18:38:48 PDT
(In reply to
comment #10
)
> Committed
r185528
: <
http://trac.webkit.org/changeset/185528
>
I think you need to initialize std::array (You can use std::fill for example).
Darin Adler
Comment 12
2015-06-12 18:42:55 PDT
(In reply to
comment #11
)
> (In reply to
comment #10
) > > Committed
r185528
: <
http://trac.webkit.org/changeset/185528
> > > I think you need to initialize std::array (You can use std::fill for > example).
I don’t think I do. If there is an exception, the return value is ignored. If the array is used, we initialize the characters in the string and the null character terminator. We don't need to initialize the rest of the array. Might need to initialize it if we use some strict memory debugger tool or validator perhaps.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug